# cads

./: .gitignore  Makefile  config  packed-refs
cads-edge/: README.MD  TODO.MD  config.132264.json  config.132264.lua  config.80819.json  config.80819.lua  config.caasdev.json  config.cv001.json  config.cv211.lua  config.cv311.lua  config.cv405.json  config.cv911.json  config.cv912.json  config.demo.json  config.demo.lua  config.dev.json  config.dev.lua  config.gen.json  config.gen.lua  config.jig.json  config.jig.lua  config.json  config.lua  dump.lua  env.sh  gconfig.json  measurements.lua  meson-vcpkg.txt  meson.build
cads-edge/GO_SDK/Gocator/: CMakeLists.txt  GoSdk-2017.sln  GoSdk-Nano.mk
cads-edge/GO_SDK/Gocator/GoAccelerator/GoAcceleratorApp/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
cads-edge/GO_SDK/Gocator/GoAccelerator/GoAcceleratorEngine/: Engine.cs  GoAcceleratorEngine.csproj
cads-edge/GO_SDK/Gocator/GoAccelerator/GoAcceleratorEngine_Unbranded/: GoAcceleratorEngine_Unbranded.csproj
cads-edge/GO_SDK/Gocator/GoSdk/: GoSdk-2015.vcxproj.filters  GoSdk-2017.vcxproj  GoSdk-Linux_X64.mk  GoSdk-Nano.mk  GoSdkExample-2013.vcxproj.filters  GoSdkExample-2017.vcxproj  GoSdkExample-Linux_X64.mk  GoSdkNet-2013.vcxproj.filters  meson.build
cads-edge/GO_SDK/Gocator/GoSdk/GoSdk/: GoAccelerator.c  GoAccelerator.h  GoAccelerator.x.h  GoAcceleratorMgr.h  GoAcceleratorMgr.x.h  GoAcceleratorServer.x.h  GoAdvanced.c  GoAdvanced.h  GoAdvanced.x.h  GoAlgorithm.c  GoAlgorithm.h  GoAlgorithm.x.h  GoGeoCal.c  GoGeoCal.h  GoGeoCal.x.h  GoLayout.c  GoLayout.h  GoLayout.x.h  GoMaterial.c  GoMaterial.h  GoMaterial.x.h  GoMultiplexBank.c  GoMultiplexBank.h  GoMultiplexBank.x.h  GoPartDetection.c  GoPartDetection.h  GoPartDetection.x.h  GoPartMatching.c  GoPartMatching.h  GoPartMatching.x.h  GoPartModel.c  GoPartModel.h  GoPartModel.x.h  GoProfileGeneration.c  GoProfileGeneration.h  GoProfileGeneration.x.h  GoRecordingFilter.c  GoRecordingFilter.h  GoRecordingFilter.x.h  GoReplay.c  (+42 more)
cads-edge/GO_SDK/Gocator/GoSdk/GoSdkNet/: GoAccelerator.h  GoAcceleratorMgr.h  GoAdvanced.h  GoAlgorithm.h  GoGeoCal.h  GoLayout.h  GoMaterial.h  GoMultiplexBank.h  GoPartDetection.h  GoPartMatching.h  GoPartModel.h  GoProfileGeneration.h  GoRecordingFilter.h  GoReplay.h  GoReplayCondition.h  GoSdkDef.h  GoSdkLib.cpp  GoSdkLib.h  GoSection.h  GoSections.h  GoSensor.h  GoSensorInfo.h  GoSetup.h  GoSurfaceGeneration.h  GoSystem.h  GoTracheid.h  GoTransform.h  GoUtils.h
cads-edge/GO_SDK/Gocator/GoSdk/GoSdkNetExample/: GoSdkNetExample.cs
cads-edge/GO_SDK/Platform/kApi/: CMakeLists.txt  kApi-2013.vcxproj  kApi-2015.vcxproj  kApi-2015.vcxproj.filters  kApi-2017.vcxproj  kApi-Linux_X64.mk  kApi-Nano.mk  kApiNet-2017.vcxproj.filters  meson.build
cads-edge/GO_SDK/Platform/kApi/kApi/: kAlloc.cpp  kAlloc.h  kAlloc.x.h  kApi.h  kApiCfg.h  kApiDef.cpp  kApiDef.h  kApiDef.x.h  kApiLib.cpp  kApiLib.h  kApiLib.rc  kApiLib.x.h  kApiVersion.h  kAssembly.cpp  kAssembly.h  kAssembly.x.h  kObject.cpp  kObject.h  kObject.x.h  kType.cpp  kType.h  kType.x.h  kValue.cpp  kValue.h  kValue.x.h
cads-edge/GO_SDK/Platform/kApi/kApiNet/: KAlloc.cpp  KAlloc.h  KApiDef.cpp  KApiDef.h  KApiLib.cpp  KApiLib.h  KApiLib.rc  KApiNet.h  KAssembly.h  KAssemblyManager.h  KException.h  KObject.cpp  KObject.h  KType.cpp  KType.h  KValue.h
cads-edge/GO_SDK/doc/kApi/html/: annotated.html  classes.html  classk_alloc-members.html  classk_alloc.html  classk_alloc_a18a7db111ffa30b1f0075a294474aec8.html  classk_alloc_acd9e705549e1627936fd219d160eb455.html  classk_api_lib-members.html  classk_api_lib.html  classk_api_lib_a2c2fde73dcd41502a9e24ffa60caa578.html  classk_array1-members.html  classk_array1.html  classk_array1_adff9193cdf906e1e7f0b6b8d6d8e0792.html  classk_array1_ae1a0a04c8f0af8a960c3026b7d81cd68.html  classk_array2-members.html  classk_array2.html  classk_array2_a0921750b2f24762c8ec484a092902e63.html  classk_array2_aaa5af316428492e92038764561c19b4a.html  classk_array3-members.html  classk_array3.html  classk_array_list.html  (+213 more)
cads-edge/GO_SDK/samples/C/: GoSdkSamplesC.sln
cads-edge/GO_SDK/samples/C#/: GoSdkSamplesC#.sln
cads-edge/configs/: config.80819.json  config.80819.lua  config.caasdev.json  config.demo.json  config.demo.lua  config.jcv001.lua  config.jcv101.json  config.jcv101.lua  config.pulley.lua  config.scamp.json  config.scamp.lua
cads-edge/flatbuffers/: cads_msg.fbs  meson.build  p_config.fbs  plot_data.fbs  z_data.fbs
cads-edge/include/: belt.h  cads.h  coms.h  constants.h  coro.hpp  csv.hpp  db.h  dynamic_processing.h  edge_detection.h  err.h  fiducial.h  filters.h  generator.hpp  global_config.h  gocator_reader.h  gocator_reader_base.h  init.h  intermessage.h  interpolation.h  io.hpp  lua_script.h  measurements.h  msg.h  nan_removal.h  origin_detection_thread.h  profile.h  profile_t.h  readerwriterqueue.h  regression.h  sampling.h  save_send_thread.h  scan.h  scandb.h  sqlite_gocator_reader.h  stats.hpp  upload.h  utils.hpp  vec_nan_free.h  window.hpp
cads-edge/src/: README.MD  belt.cpp  cads.cpp  coms.cpp  constants.cpp  db.cpp  dynamic_processing.cpp  edge_detection.cpp  err.cpp  fiducial.cpp  filters.cpp  generator.cpp  global_variables.cpp  gocator_reader.cpp  gocator_reader_base.cpp  init.cpp  intermessage.cpp  interpolation.cpp  lua_interface.cpp  main.cpp  measurements.cpp  meson.build  nan_removal.cpp  origin_detection_thread.cpp  profile.cpp  profile.db  regression.cpp  sampling.cpp  save_send_thread.cpp  scan.cpp  scandb.cpp  sqlite_gocator_reader.cpp  upload.cpp  utils.cpp  vec_nan_free.cpp  window.cpp
cads-edge/subprojects/: coop.wrap  cpr.wrap  cprcads.wrap  flatbuffers.wrap  iir1.wrap  nats.c.wrap  scamp.wrap
cads-edge/subprojects/packagefiles/coop/: meson.build
cads-edge/subprojects/packagefiles/cpr-1.9.3/: meson.build
cads-edge/subprojects/packagefiles/flatbuffers-22.9.29/: meson.build
cads-edge/subprojects/packagefiles/iir1/: meson.build
cads-edge/subprojects/packagefiles/nats.c-3.3.0/: meson.build
cads-edge/test/: cads_unit_tests.cpp  meson.build  nan_removal.cpp  tconfig.json
(+4526 files in other folders)
