cadsSrc += files(
  'cads.cpp',
  'db.cpp',
  'coms.cpp',
  'gocator_reader.cpp',
  'regression.cpp', 
  'fiducial.cpp',
  'sqlite_gocator_reader.cpp',
  'gocator_reader_base.cpp',
  'filters.cpp',
  'edge_detection.cpp',
  'profile.cpp',
  'constants.cpp',
  'dynamic_processing.cpp',
  'init.cpp',
  'save_send_thread.cpp',
  'origin_detection_thread.cpp',
  'belt.cpp',
  'lua_interface.cpp',
  'sampling.cpp',
  'upload.cpp',
  'utils.cpp',
  'vec_nan_free.cpp'
)

cadsEntry += files('main.cpp')